<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailsScrollView"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/nameLabelTextView"
            android:text="@string/label_name"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/ContactLabelTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/nameTextView" android:layout_row="0" android:layout_column="1" style="@style/ContactTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/phoneLabelTextView" android:text="@string/label_phone" android:layout_row="1" android:layout_column="0" style="@style/ContactLabelTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/phoneTextView" android:layout_row="1" android:layout_column="1" style="@style/ContactTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/emailLabelTextView" android:text="@string/label_email" android:layout_row="2" android:layout_column="0" style="@style/ContactLabelTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/emailTextView" android:layout_row="2" android:layout_column="1" style="@style/ContactTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/streetLabelTextView" android:text="@string/label_street" android:layout_row="3" android:layout_column="0" style="@style/ContactLabelTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/streetTextView" android:layout_row="3" android:layout_column="1" style="@style/ContactTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/cityLabelTextView" android:text="@string/label_city" android:layout_row="4" android:layout_column="0" style="@style/ContactLabelTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/cityTextView" android:layout_row="4" android:layout_column="1" style="@style/ContactTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/stateLabelTextView" android:text="@string/label_state" android:layout_row="5" android:layout_column="0" style="@style/ContactLabelTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/stateTextView" android:layout_row="5" android:layout_column="1" style="@style/ContactTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/zipLabelTextView" android:text="@string/label_zip" android:layout_row="6" android:layout_column="0" style="@style/ContactLabelTextView"/>

        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/zipTextView" android:layout_row="6" android:layout_column="1" style="@style/ContactTextView"/>


    </GridLayout>

</ScrollView>